# rapidmark

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/classification/: 01_classification_task.py
examples/ner/: 01_basic_ner.py  02_ner_with_hierarchical_labels.py  03_complete_ner_task.py  04_process_ner_results.py
rapidmark/: __init__.py  __main__.py  cli.py  generator.py
rapidmark/commands/: __init__.py  build.py  clean.py  init.py  merge.py
rapidmark/generator/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
rapidmark/generator/docs/task/: named-entity-recognition.md
rapidmark/generator/src/: App.vue  main.js  vite-env.d.ts
rapidmark/generator/src/__mocks__/: classificationTask.ts  task.ts
rapidmark/generator/src/components/: DocPanel.vue  Footer.vue  Header.vue  Main.vue  Sidebar.vue  Toolbar.vue  TopBar.vue
rapidmark/generator/src/composables/: useClassification.ts  useEntity.ts  useEntityGroup.ts  useEntityHighlight.ts  useEntitySelection.ts  useLabel.ts  usePopover.ts  useResult.ts  useStatus.ts  useTask.ts  useToast.ts
rapidmark/generator/src/plugins/: vuetify.js
rapidmark/generator/src/styles/: main.css
rapidmark/sdk/: __init__.py  models.py  results.py
rapidmark/sdk/models/: __init__.py  result.py  task.py
rapidmark/utils/: __init__.py  file_utils.py  json_handler.py
schema/: result.schema.json  result_v1.schema.json  task.schema.json
scripts/: generate_schemas.py
tests/commands/: test_merge.py
tests/sdk/: test_models.py  test_results.py
(+13 files in other folders)
